# helioselene

./: .gitignore  README.md  iss_transits.py  pubspec.yaml
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/example/helioselene/: MainActivity.kt
assets/l10n/: en.json  es.json  fr.json  zh.json
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/core/: background_service.dart  ffi.dart  notification_service.dart  shared_tile_provider.dart
lib/models/: satellite.dart  transit.dart
lib/screens/: home_page.dart  location_picker_page.dart  transit_detail.dart  transit_map_page.dart
lib/widgets/: transit_visual.dart
linux/: CMakeLists.txt
linux/runner/: my_application.cc
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
rust/isscore/: Cargo.toml
rust/isscore/src/: lib.rs
rust/isscore/tests/: README.md  compare_rust_python.py  integration_tests.rs  simple_ffi_test.py
rust/isscore/tests/fixtures/: event_schema.json
scripts/: build_rust_android.ps1  build_rust_windows.ps1  run_all_tests.py
test/: widget_test.dart
test/models/: transit_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/runner/: CMakeLists.txt  Runner.rc  main.cpp
